# ok-nte

./: .gitmodules  README.md  README_en.md  pyproject.toml  requirements-dev.txt  requirements.in  requirements.txt
.agent/skills/translate-task-i18n/: SKILL.md
.github/: sponsor.md
.github/workflows/: ai_code_review.yml  build.yml
assets/: coco_annotations.json
i18n/en_US/LC_MESSAGES/: ok.mo  ok.po
i18n/es_ES/LC_MESSAGES/: ok.mo  ok.po
i18n/ja_JP/LC_MESSAGES/: ok.mo  ok.po
i18n/ko_KR/LC_MESSAGES/: ok.mo  ok.po
i18n/pt_BR/LC_MESSAGES/: ok.mo  ok.po
i18n/zh_CN/LC_MESSAGES/: ok.mo  ok.po
i18n/zh_TW/LC_MESSAGES/: ok.mo  ok.po
src/: Labels.py  YOLO26OpenVINOAsyncDetector.py  config.py  globals.py  process_feature.py
src/char/: BaseChar.py  CharFactory.py  Chiz.py  Hotori.py  Jiuyuan.py  Mint.py  Nanally.py  Sakiri.py  Zero.py
src/char/custom/: CustomChar.py  CustomCharManager.py
src/combat/: BaseCombatTask.py  CombatCheck.py
src/interaction/: NTEInteraction.py
src/scene/: NTEScene.py  ScreenPosition.py
src/sound_trigger/: DodgeCounterTrigger.py  SoundCombatContext.py  SoundListener.py  __init__.py
src/tasks/: AnomalyTask.py  BaseNTETask.py  DailyTask.py  FishingTask.py  LauncherTask.py  NTEOneTimeTask.py  RhythmTask.py  ShopSpecialTask.py
src/tasks/trigger/: AutoCombatTask.py  FastTravelTask.py  HeistTask.py  SkipDialogTask.py  SoundTriggerTask.py
src/ui/: CharManagerTab.py  TeamManagerTab.py  TeamScannerTab.py  common.py
src/utils/: game_filters.py  image_utils.py
tests/: TestConFull.py  TestCustomChar.py  TestCustomCharCore.py
(+2 files in other folders)
