[project]
name = "ok-nte"
version = "0.1.0"
description = "An image-recognition-based automation tool for Neverness To Everness"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "librosa>=0.11.0",
    "ok-script>=1.0.116",
    "onnxocr-ppocrv5>=0.0.17",
    "opencc>=1.2.0",
    "opencv-python>=4.13.0.92",
    "openvino>=2026.1.0",
    "pynput>=1.8.1",
    "pyside6==6.9.1",
    "scikit-image>=0.26.0",
    "soundcard>=0.4.6",
]

[dependency-groups]
dev = [
    "polib>=1.2.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.ruff.format]
quote-style = "double"
